// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Time Axis Examples when zooming for should render as expected as zoom [0, 1] 1`] = `
{
  "height": 24.181640625000043,
  "width": 717,
  "x": 63,
  "y": 496,
}
`;

exports[`Time Axis Examples when zooming for should render as expected as zoom [0.2, 0.5] 1`] = `
{
  "height": 24.199218750000043,
  "width": 717,
  "x": 63,
  "y": 496,
}
`;

exports[`Time Axis Examples when zooming for should render as expected as zoom [0.3, 0.35] 1`] = `
{
  "height": 26.414062500000046,
  "width": 721.7490234375,
  "x": 63,
  "y": 494,
}
`;

exports[`Time Axis Examples when zooming for should render as expected as zoom [0.4, 0.4125] 1`] = `
{
  "height": 26.414062500000046,
  "width": 717,
  "x": 63,
  "y": 494,
}
`;

exports[`Time Axis Examples when zooming for should render as expected as zoom [0.25, 0.35] 1`] = `
{
  "height": 26.414062500000043,
  "width": 717,
  "x": 63,
  "y": 494,
}
`;

exports[`Time Axis Examples when zooming for should render as expected as zoom [0.35, 0.375] 1`] = `
{
  "height": 26.414062500000043,
  "width": 717,
  "x": 63,
  "y": 494,
}
`;

exports[`Time Axis Examples when zooming for should render as expected as zoom [0.45, 0.45625] 1`] = `
{
  "height": 4.3903587749432614e-14,
  "width": 717,
  "x": 63,
  "y": 520,
}
`;
